--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "MONCAMPUS_USERNAME": "Username of MonCampus", 
     "MONCAMPUS_PASSWORD": "Password of MonCampus", 
-    "MONCAMPUS_START_DATE": "Start date of fetching events from MonCampus",
-    "MONCAMPUS_END_DATE": "End date of fetching events from MonCampus",
+    "MONCAMPUS_START_DATE": "Start date of fetching events from MonCampus (YYYY-MM-DD)",
+    "MONCAMPUS_END_DATE": "End date of fetching events from MonCampus (YYYY-MM-DD)",
     "CHROMIUM_EXECUTABLE_PATH": "/usr/bin/chromium-browser", 
     "ECAL_API_KEY": "Your API Key from ecal.com", 
     "ECAL_API_SECRET": "Your API Secret from ecal.com", 
